tests/trybuild/schedule/type_comma_alone.rs
use brood::system::Schedule;

type Schedule = Schedule!(,);

fn main() {}
